# NLP_ensembles

./: .gitignore  BERT_ensembles.ipynb  BERT_ensembles_rtd.ipynb  BERT_pairs_comparison.ipynb  BERT_training.ipynb  BERT_training_weak.ipynb  LICENSE  README.md  models_subset.ipynb  pyproject.toml  requirements.txt  weak_bert_testing.ipynb
src/attention_ensembles/: __init__.py  correlations.py  data.py  ensembles.py  metrics.py  models.py
tests/: test_correlations.py  test_data.py  test_ensembles.py  test_metrics.py  test_models.py
