[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensemble-weighting-with-attention-topology"
version = "0.1.0"
description = "Ensemble weight optimisation for fine-tuned BERT models using topological features of attention layers (RTD)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Polina Proskura" },
]
keywords = [
    "bert",
    "ensembles",
    "attention",
    "topology",
    "rtd",
    "nlp",
    "uncertainty-quantification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers[torch]>=4.30",
    "datasets>=2.13",
    "accelerate>=0.20.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "bayesian-optimization>=1.4",
    "cvxopt>=1.3",
    "qpsolvers==3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "jupyter>=1.0",
]

[project.urls]
Repository = "https://github.com/polinaproskura/ensemble-weighting-with-attention-topology"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: requires network or GPU (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
